# starlite_boilerplate

./: .gitignore  README.md  pyproject.toml
src/app/: main.py  test.sqlite
src/app/controllers/: auth_controller.py  user_controller.py
src/app/database/: setup_db.py
src/app/database/models/: base_model.py  user_model.py
src/app/guards/: is_owner_guard.py
src/app/util/: crypt.py
