[tool.poetry]
name = "pythonproject5"
version = "0.1.0"
description = ""
authors = ["Felix Scheffler <felix.scheffler@studium.uni-hamburg.de>"]

[tool.poetry.dependencies]
python = "^3.10"
starlite = "^1.48.1"
sqlalchemy = "^1.4.46"
uvicorn = "^0.20.0"
aiosqlite = "^0.18.0"
python-jose = "^3.3.0"
cryptography = "^39.0.0"
alembic = "^1.9.2"
structlog = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
